# mini_social_media

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  Graph.cpp  Graph.h  User.cpp  User.h  analyzer.cpp  analyzer.h  analyzer.ui  connectionwidget.cpp  database.cpp  graph.cpp  graph.h  graph_visualizer.py  loginwindow.cpp  loginwindow.h  loginwindow.ui  main - Copy.cpp  mainwindow.cpp
